# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Id: $

  21 Feb 2008; Andrew Gaffney <agaffney@gentoo.org> catalyst:
  Force-enable --verbose when using --debug

  21 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/kmerge.sh:
  Changing modules-update to update-modules to quiet a warning and keep us
  from having it get removed out from under us.

  21 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/support/chroot-functions.sh:
  Adding a note to myself for better debug and moving run_default_funcs to the
  bottom of the script so it gets executed. Since this can otherwise break
  pkgcache, I'm making this catalyst 2.0.6_pre9 for testing, immediately.

  21 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-chroot.sh, targets/stage2/stage2-chroot.sh,
  targets/support/chroot-functions.sh:
  Moved creating of stage1 package list to the beginning of stage1-chroot.sh
  so we can get the output with --debug, added --newuse to the options for
  stage1, as we should always rebuild any package where the USE has changed,
  removed removal of portage logs from stage2-chroot.sh since it is being done
  by cleanup_stages, moved world removal in cleanup_stages into a check for
  stages 1 through 3, made update_env_settings check for the existence of
  env-update before running it since we now run update_env_settings by default
  everywhere chroot-functions.sh is sourced, and added a section to show_debug
  to list the packages, since we don't yet force-enable verbose with debug.

  20 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  modules/catalyst_lock.py:
  Since my python sucks and I don't feel like troubleshooting it at the
  moment, commenting out all the DEBUG code in catalyst_lock and rolling up
  2.0.6_pre8 for testing.

  20 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> AUTHORS, catalyst,
  modules/builder.py, modules/catalyst_lock.py: